--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css?=15">
+    <link rel="stylesheet" href="./styles.css?=151">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-    <script defer src="./script.js?=15"></script>
+    <script defer src="./script.js?=151"></script>
     <title>Totem.lol</title>
     <meta name="author" content="Totem#0001">
     <meta property="og:type" content="website">
@@ -56,11 +56,11 @@
                     <svg fill="currentColor" text="gray" aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-history">
                         <path d="m.427 1.927 1.215 1.215a8.002 8.002 0 1 1-1.6 5.685.75.75 0 1 1 1.493-.154 6.5 6.5 0 1 0 1.18-4.458l1.358 1.358A.25.25 0 0 1 3.896 6H.25A.25.25 0 0 1 0 5.75V2.104a.25.25 0 0 1 .427-.177ZM7.75 4a.75.75 0 0 1 .75.75v2.992l2.028.812a.75.75 0 0 1-.557 1.392l-2.5-1A.751.751 0 0 1 7 8.25v-3.5A.75.75 0 0 1 7.75 4Z"></path>
                     </svg>
-                  <commits>108 Commits</commits>
+                  <commits class="commits-lable">108 Commits</commits>
                  </a>
                  <a href="#">
                   <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 425.29"><path d="M256 196c63.31 0 114.65 51.33 114.65 114.65 0 63.32-51.34 114.64-114.65 114.64-63.32 0-114.65-51.32-114.65-114.64S192.68 196 256 196zm103.79-71.3c-3.13 1.55-6.3 3.25-9.42 5.05-9.37 5.49-18.63 12.21-28.08 19.92l-20.17-23.09c6.96-6.45 14.5-12.33 22.5-17.53 6.37-4.17 13.04-7.88 19.92-11.05 2.75-1.38 5.5-2.67 8.33-3.87-13.29-23.55-32.42-40.42-54.09-50.83-43.06-20.62-96.68-16.14-134.61 13.32-21.79 16.88-38.33 42.13-44.71 75.59l-2 10.45-10.42 1.84c-10.21 1.79-19.32 4.25-27.33 7.37-7.75 3.01-14.66 6.72-20.7 11.09-4.84 3.5-9.01 7.42-12.54 11.66-10.97 13.13-16.05 29.58-15.93 46.26.13 16.9 5.63 33.99 15.8 48.03 3.79 5.21 8.16 10.01 13.16 14.17 5.09 4.2 10.79 7.7 17.21 10.34 6.37 2.62 13.42 4.49 21.21 5.58h11.34c-.81 10.2-.56 20.51.76 30.66h-12.6l-1.92-.16c-11.12-1.42-21.21-4.05-30.37-7.83-9.46-3.93-17.84-8.97-25.21-15.13-7-5.84-13.12-12.46-18.33-19.67C7.67 267.71.17 244.29 0 220.95c-.16-23.58 7.17-47.03 23.01-66.04 5.12-6.16 11.15-11.83 18.07-16.83 8.05-5.83 17.25-10.75 27.68-14.78 7.16-2.8 14.82-5.14 22.91-7.01 9.17-36.41 28.71-64.45 53.83-83.92C192.57-4.1 258.61-9.92 312.04 15.75c29.2 14.05 54.7 37.42 71.25 70.29 6.66-1.04 13.33-1.58 19.95-1.5 69.26.52 109.46 59.53 108.75 124.04-.29 26.29-7.37 52.46-21.88 71.71-9.45 12.54-21.58 22.79-36.12 30.91-13.99 7.84-30.33 13.8-48.66 18.05l-3.34.4c1.34-10.42 1.54-20.8.7-31.27 13.69-3.49 25.85-8.07 36.26-13.88 10.96-6.13 19.92-13.59 26.62-22.54 10.42-13.88 15.55-33.5 15.75-53.63.57-47.22-26.49-92.88-78.29-93.2-14.29-.13-29.16 3.33-43.24 9.57zm-89.02 241.69h-29.56c-5.85 0-10.64-4.78-10.64-10.63v-32.17h-22.15c-3.65-.15-6.23-1.36-7.73-3.64-4.06-6.08 1.48-12.09 5.33-16.33 10.9-11.96 37.63-40.73 43.02-47.06 4.07-4.52 9.88-4.52 13.95 0 5.57 6.49 33.64 36.57 44.01 48.21 3.59 4.05 8.04 9.57 4.29 15.18-1.52 2.28-4.09 3.49-7.74 3.64h-22.13v32.17c0 5.84-4.79 10.63-10.65 10.63z" fill="currentColor"/></svg>
-                  <lastupdated>1 minute(s) ago</lastupdated>
+                  <lastupdated class="updated-lable">1 minute(s) ago</lastupdated>
                  </a>
                  <a href="#">
                     <svg fill="none" height="16" width="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 124 141.53199999999998"><path d="M10.383 126.894L0 0l124 .255-10.979 126.639-50.553 14.638z" fill="#e34f26"/><path d="M62.468 129.277V12.085l51.064.17-9.106 104.851z" fill="#ef652a"/><path d="M99.49 41.362l1.446-15.49H22.383l4.34 47.49h54.213L78.81 93.617l-17.362 4.68-17.617-5.106-.936-12.085H27.319l2.128 24.681 32 8.936 32.255-8.936 4.34-48.17H41.107L39.49 41.362z" fill="#fff"/></svg>
