--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <script defer src="./script.js"></script>
     <link rel="stylesheet" href="./styles.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" integrity="sha512-2bMhOkE/ACz21dJT8zBOMgMecNxx0d37NND803ExktKiKdSzdwn+L7i9fdccw/3V06gM/DBWKbYmQvKMdAA9Nw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kit.fontawesome.com/1ea026145b.js" crossorigin="anonymous"></script>
     <meta name="author" content="Totem#0001">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://totem.lol/images/totem-logo.png">
@@ -21,11 +19,11 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <i class="fad fa-apartment"></i>
+              <i class="fa-duotone fa-apartment"></i>
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <i class="fad fa-apartment"></i>
+                <i class="fa-duotone fa-apartment"></i>
                 <div class="card-info-title">
                   <h3>Apartments</h3>  
                   <h4>Places to be apart. Wait, what?</h4>
@@ -37,11 +35,11 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <i class="fad fa-unicorn"></i>
+              <i class="fa-duotone fa-unicorn"></i>
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <i class="fad fa-unicorn"></i>
+                <i class="fa-duotone fa-unicorn"></i>
                 <div class="card-info-title">
                   <h3>Unicorns</h3>  
                   <h4>A single corn. Er, I mean horn.</h4>
@@ -53,11 +51,11 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <i class="fad fa-blender-phone"></i>
+              <i class="fa-duotone fa-blender-phone"></i>
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <i class="fad fa-blender-phone"></i>
+                <i class="fa-duotone fa-blender-phone"></i>
                 <div class="card-info-title">
                   <h3>Blender Phones</h3>  
                   <h4>These absolutely deserve to exist.</h4>
