--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-0.44 0.24 64 64" width="64" height="64">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-0.44 0.24 64 64" width="120" height="120">
                     <g fill="#4c4c4c"><use xlink:href="#A"/>
                         <path d="M10.034 30.1a1.4 1.4 0 0 0-1.42-1.42c-.8 0-1.33.62-1.33 1.42v6.746a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42V30.1zm7.723-5.228a1.4 1.4 0 0 0-1.42-1.42 1.4 1.4 0 0 0-1.42 1.42v14.735a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42zM25.4 30.1a1.4 1.4 0 0 0-1.42-1.42 1.4 1.4 0 0 0-1.42 1.42v6.746a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42z"/>
                         <use xlink:href="#A" x="30.625"/>
@@ -32,16 +32,7 @@
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-0.44 0.24 64 64" width="64" height="64">
-                    <g fill="#ffffff"><use xlink:href="#A"/>
-                        <path d="M10.034 30.1a1.4 1.4 0 0 0-1.42-1.42c-.8 0-1.33.62-1.33 1.42v6.746a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42V30.1zm7.723-5.228a1.4 1.4 0 0 0-1.42-1.42 1.4 1.4 0 0 0-1.42 1.42v14.735a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42zM25.4 30.1a1.4 1.4 0 0 0-1.42-1.42 1.4 1.4 0 0 0-1.42 1.42v6.746a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42z"/>
-                        <use xlink:href="#A" x="30.625"/>
-                        <path d="M40.66 30.1a1.4 1.4 0 1 0-2.841 0v6.746a1.4 1.4 0 1 0 2.841 0zm7.632-5.228a1.4 1.4 0 1 0-2.841 0v14.735a1.4 1.4 0 1 0 2.841 0zm7.634 5.228a1.4 1.4 0 1 0-2.841 0v6.746a1.4 1.4 0 1 0 2.841 0zm7.634 3.827a1.4 1.4 0 1 0-2.84 0v2.93a1.4 1.4 0 1 0 2.84 0z"/>
-                    </g>
-                    <defs>
-                        <path id="A" d="M2.4 33.927a1.4 1.4 0 0 0-1.42-1.42 1.4 1.4 0 0 0-1.42 1.42v2.93a1.4 1.4 0 0 0 1.42 1.42 1.4 1.4 0 0 0 1.42-1.42z"/>
-                    </defs>
-                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-0.44 0.24 120 60" width="24" height="24"><g transform="matrix(1.199534 0 0 1.199534 15.237208 6.249314)" fill="#ffffff"><path d="M21.4 26.2h3.2v12.5h-3.2zM50 29.8c-.1-.1-1.1-.7-2.7-.7-2 0-3.5 1.4-3.5 3.3s1.4 3.3 3.5 3.3c1.5 0 2.5-.6 2.7-.7v3.4c-.4.1-1.5.4-2.9.4-3.6 0-6.7-2.4-6.7-6.5 0-3.7 2.8-6.5 6.7-6.5 1.5 0 2.6.4 2.9.4zm-33 0c-.1-.1-1.1-.7-2.7-.7-2 0-3.5 1.4-3.5 3.3s1.4 3.3 3.5 3.3c1.5 0 2.5-.6 2.7-.7v3.4c-.4.1-1.5.4-2.9.4-3.5 0-6.7-2.4-6.7-6.5 0-3.7 2.8-6.5 6.7-6.5 1.5 0 2.6.4 2.9.4zm49.5 2.7c0 3.6-2.8 6.5-6.6 6.5s-6.6-2.9-6.6-6.5 2.8-6.5 6.6-6.5c3.9 0 6.6 2.9 6.6 6.5zm-6.6-3.3c-1.9 0-3.3 1.5-3.3 3.3s1.4 3.3 3.3 3.3 3.3-1.5 3.3-3.3-1.4-3.3-3.3-3.3zm-23.4-.1s-1.4-.4-2.5-.4c-1.3 0-2 .4-2 1 0 .8.9 1 1.4 1.2l.9.3c2 .7 3 2.1 3 3.6 0 3.1-2.8 4.2-5.2 4.2-1.7 0-3.3-.3-3.4-.3v-2.9c.3.1 1.6.5 3 .5 1.6 0 2.3-.5 2.3-1.2 0-.6-.6-1-1.4-1.2-.2-.1-.5-.2-.7-.2-1.8-.6-3.2-1.6-3.2-3.7 0-2.3 1.8-3.9 4.7-3.9 1.5 0 3 .4 3.1.4z"/><use xlink:href="#A"/><path d="M12.7 8.5a1.58 1.58 0 0 0-1.6-1.6c-.9 0-1.5.7-1.5 1.6v7.6a1.58 1.58 0 0 0 1.6 1.6 1.58 1.58 0 0 0 1.6-1.6V8.5zm8.7-5.9A1.58 1.58 0 0 0 19.8 1a1.58 1.58 0 0 0-1.6 1.6v16.6a1.58 1.58 0 0 0 1.6 1.6 1.58 1.58 0 0 0 1.6-1.6zM30 8.5a1.58 1.58 0 0 0-1.6-1.6 1.58 1.58 0 0 0-1.6 1.6v7.6a1.58 1.58 0 0 0 1.6 1.6 1.58 1.58 0 0 0 1.6-1.6z"/><use xlink:href="#A" x="34.5"/><path d="M47.2 8.5a1.58 1.58 0 1 0-3.2 0v7.6a1.58 1.58 0 1 0 3.2 0zm8.6-5.9a1.58 1.58 0 1 0-3.2 0v16.6a1.58 1.58 0 1 0 3.2 0zm8.6 5.9a1.58 1.58 0 1 0-3.2 0v7.6a1.58 1.58 0 1 0 3.2 0zm8.6 4.3a1.58 1.58 0 1 0-3.2 0v3.3a1.58 1.58 0 1 0 3.2 0z"/></g><defs><path id="A" d="M4.1 12.8a1.58 1.58 0 0 0-1.6-1.6 1.58 1.58 0 0 0-1.6 1.6v3.3a1.58 1.58 0 0 0 1.6 1.6 1.58 1.58 0 0 0 1.6-1.6z"/></defs></svg>
                 <div class="card-info-title">
                   <h3>Cisco Documentation</h3>  
                   <h4>https://net.totem.lol</h4>
@@ -53,11 +44,11 @@
         <div class="card">
           <div class="card-content">
             <div class="card-image">
-              <!-- 2 Image -->
+              <i class="fa-solid fa-spinner"></i>
             </div>
             <div class="card-info-wrapper">
               <div class="card-info">
-                <!-- 2 Image -->
+                <i class="fa-solid fa-spinner"></i>
                 <div class="card-info-title">
                   <h3>Fancy Card</h3>  
                   <h4>Placeholder type thingy</h4>
