--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div id="cards">
-        <div class="card">
+        <div class="card" onclick="window.location.href = 'https://net.totem.lol'">
           <div class="card-content">
             <div class="card-image">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-0.44 0.24 64 64" width="120" height="120">
@@ -66,7 +66,7 @@
             </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card" onclick="window.location.href = 'https://docs.totem.lol'">
           <div class="card-content">
             <div class="card-image">
               <i class="fa-solid fa-users-rectangle"></i>
